--- a/src/app/black-editor/black-editor.component.html
+++ b/src/app/black-editor/black-editor.component.html
@@ -1,44 +1,64 @@
-<md-card class="blacks-card" >
+<md-card class="blacks-card" *ngIf="isEditMode && black">
   <md-card-title>
     <md-input-container>
-      <input mdInput [(ngModel)]="editBlack.name" placeholder="名字" required>
+      <input mdInput [(ngModel)]="black.name" placeholder="名字" required>
     </md-input-container>
   </md-card-title>
   <md-card-content>
-    <app-image-picker [(image)]="editBlack.img"></app-image-picker>
+    <app-image-picker [(image)]="black.img"></app-image-picker>
     <div>
       描述
-      <div *ngFor="let description of editBlack.descriptions; let i = index">
-        {{editBlack.descriptions[i]}}
-        <md-icon (click)="modifyDescription(i)">edit</md-icon>
-        <md-icon (click)="deleteDescription(i)">close</md-icon>
-      </div>
       <md-input-container>
-        <textarea mdInput [(ngModel)]="editDescription" placeholder="描述"></textarea>
+        <textarea mdInput [(ngModel)]="blackDescriptions" placeholder="描述"></textarea>
       </md-input-container>
-      <button md-button (click)="addDescription()">完成描述</button>
     </div>
     <div>
-    标签
-    <md-chip-list>
-      <md-chip *ngFor="let tag of editBlack.tags; let i = index">
-        {{tag}}
-        <md-icon (click)="deleteTag(i)">close</md-icon>
-      </md-chip>
-    </md-chip-list>
-    <md-input-container>
-      <input mdInput [(ngModel)]="editTag" placeholder="加标签">
-    </md-input-container>
-    <button md-button (click)="addTag()">加标签</button>
-  </div>
+      标签
+      <md-chip-list>
+        <md-chip *ngFor="let tag of black.tags; let i = index">
+          {{tag}}
+          <md-icon (click)="deleteTag(i)">close</md-icon>
+        </md-chip>
+      </md-chip-list>
+      <md-input-container>
+        <input mdInput [(ngModel)]="editTag" placeholder="加标签" (blur)="addTag()">
+      </md-input-container>
+    </div>
+    <div *ngIf="blackKey">
+      更多
+      <app-black-note-editor [blackKey]="blackKey" [isEditMode]="true"></app-black-note-editor>
+    </div>
   </md-card-content>
   <md-card-actions>
     <a md-raised-button (click)="addBlack()" color="primary"
-       [disabled]="!editBlack.name">
-       {{!!editBlack.key ? '更新': '添加'}}
+       [disabled]="!black.name">
+       {{!!black.key ? '更新': '添加'}}
     </a>
     <a md-raised-button (click)="close()">
        关闭
     </a>
+  </md-card-actions>
+</md-card>
+
+<md-card class="blacklist-card" *ngIf="!isEditMode && black">
+  <md-card-title>
+    <img [src]="black.img" [alt]="black.name" *ngIf="black.img" md-card-avatar>
+    {{black.name}}
+  </md-card-title>
+  <md-card-content>
+    <md-chip-list>
+      <md-chip *ngFor="let tag of black.tags">{{tag}}</md-chip>
+    </md-chip-list>
+    <div *ngFor="let desc of black.descriptions">
+      {{desc}}
+    </div>
+    <app-black-note-editor [blackKey]="blackKey" [isEditMode]="false" *ngIf="moreVisible">
+    </app-black-note-editor>
+  </md-card-content>
+  <md-card-actions>
+    <a md-button (click)="isEditMode = true">
+      <md-icon>mode_edit</md-icon>编辑
+    </a>
+    <a md-button (click)="showMore()">更多</a>
   </md-card-actions>
 </md-card>
