--- a/src/app/goods-index/goods-index.component.html
+++ b/src/app/goods-index/goods-index.component.html
@@ -1,4 +1,5 @@
 
+<div><button md-button (click)="prevPage()">上一页</button></div>
 <div class="goods-cards">
   <app-goods-editor #editor *ngIf="showCreateGood"
                     [isEditMode]="true"
@@ -13,6 +14,7 @@
                     (showMoreChange)="setShowMore(goodsKey, $event)">
   </app-goods-editor>
 </div>
+<div><button md-button (click)="nextPage()">下一页</button></div>
 <a md-fab (click)="addClicked()" color="primary" class="create-good">
   <md-icon>add</md-icon>
 </a>
