--- a/src/app/goods-editor/goods-editor.component.html
+++ b/src/app/goods-editor/goods-editor.component.html
@@ -68,7 +68,7 @@
   </md-card-actions>
 </md-card>
 
-<md-card class="goods-card" *ngIf="!isEditMode && goodsKey">
+<md-card class="goods-card" *ngIf="!isEditMode && !!goodsKey">
   <img [src]="goods.img" [alt]="goods.name" *ngIf="goods.img" md-card-image />
   <md-card-title>
     {{goods.name}}
@@ -77,19 +77,19 @@
     <button md-button (click)="toggleShowMore()">更多</button>
     <div *ngIf="showMore">
       {{goods.description}}
-      <div *ngIf="goods.date">
+      <div *ngIf="!!goods.date">
         日期: {{goods.date}}
       </div>
-      <div *ngIf="goods.brand">
+      <div *ngIf="!!goods.brand">
         厂商: {{goods.brand}}
       </div>
-      <div *ngIf="goods.price">
+      <div *ngIf="!!goods.price">
         价格: {{goods.price}}
       </div>
-      <div *ngIf="goods.specification">
+      <div *ngIf="!!goods.specification">
         规格: {{goods.specification}}
       </div>
-      <div *ngIf="goods.url">
+      <div *ngIf="!!goods.url">
         网址: <a [href]="goods.url" target="_blank">{{goods.url}}</a>
       </div>
       <div *ngFor="let image of goods.images">
