--- a/src/app/group-editor/group-editor.component.html
+++ b/src/app/group-editor/group-editor.component.html
@@ -1,4 +1,6 @@
-<app-group-info-editor [key]="key" [isOwner]="isOwner">
-</app-group-info-editor>
-<app-group-item-editor [key]="key" [isOwner]="isOwner"></app-group-item-editor>
-<app-group-people-editor [key]="key" [isOwner]="isOwner"></app-group-people-editor>
+<div class="outer">
+  <app-group-info-editor [key]="key" [isOwner]="isOwner">
+  </app-group-info-editor>
+  <app-group-item-editor [key]="key" [isOwner]="isOwner"></app-group-item-editor>
+  <app-group-people-editor [key]="key" [isOwner]="isOwner"></app-group-people-editor>
+</div>
