--- a/src/app/goods-index/goods-index.component.html
+++ b/src/app/goods-index/goods-index.component.html
@@ -1,12 +1,12 @@
-
-<div><button md-button (click)="prevPage()">上一页</button></div>
+<a md-icon-button *ngFor="let number of numbers" (click)="goToPage(number)" class="pager"
+    [color]="number == currentPage ? 'primary' : 'warn' ">{{number + 1}}</a>
 <div class="goods-cards">
   <app-goods-editor #editor *ngIf="showCreateGood"
                     [isEditMode]="true"
                     (submitChange)="showCreateGood = false">
   </app-goods-editor>
 
-  <app-goods-editor *ngFor="let goodsKey of goodsKeys"
+  <app-goods-editor *ngFor="let goodsKey of displayKeys"
                     [showMore]="currentShowMore == goodsKey"
                     [want]="want(goodsKey)"
                     [has]="has(goodsKey)"
@@ -14,7 +14,8 @@
                     (showMoreChange)="setShowMore(goodsKey, $event)">
   </app-goods-editor>
 </div>
-<div><button md-button (click)="nextPage()">下一页</button></div>
+<a md-icon-button *ngFor="let number of numbers" (click)="goToPage(number)" class="pager"
+    [color]="number == currentPage ? 'primary' : 'warn' ">{{number + 1}}</a>
 <a md-fab (click)="addClicked()" color="primary" class="create-good">
   <md-icon>add</md-icon>
 </a>
